2006-09-25  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* httpAdapter.c: 
	Fixed 1564999: Incorrect CimXmlRequest format.
	Fixed 1565105: Compile error with disabled debug.

	* brokerUpc.c, cimXmlRequest.c, providerDrv.c, providerMgr.c, 
	cimcClientSfcbLocal.c:
	Fixed 1562801: Segmentation fault after the provider process limit
	has been exceeded. Now an error message will be produced.
	Fixed 1565105: Compile error with disabled debug.

2006-08-30  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* providerDrv.c: 
	Fixed 1549330: implicitly group all providers of a provider module.
	
2006-08-29  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* classProviderGz.c: 
	Fixed 1519600: Removed invalid test. (By Adrian Schuur)

	* support.h, providerDrv.c, providerMgr.c, msgqueue.c: 
	Fixed 1548673: Reworked handling of MSG_SEG_CHAR segments. Now the
	necessary padding will occur only when needed, i.e. when copied
	to a request buffer.

	* objectImpl.c:
	Fixed 1548673: Fixed string and array buffer expansion logic.
	Also removes a memory leak.

2006-07-31  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* support.c, httpAdapter.c, providerDrv.c: 
	Fixed 1529096: Useless provider execution timings, by bringing in line
	with release 1.1.1 functionality.

2006-07-26  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
	* control.c, sfcbBroker.c, trace.c, trace.h: 
	Fixed 1529021: Added trace options to config file.

2006-07-25  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>
	* cimXmlParser.c: 
	Fixed 1528304: segfault on reference parameters.

	* README, configure.ac, getSchema.sh.pre.in: 
	Fixed 1528455: added support for local CIM schema files.

2006-07-25 Sven Schuetz

	* cimslp.c:
	Fixed potential potential memory problem

2006-07-19  Sven Schuetz
